# massccs-multi-device

./: CMakeLists.txt  README.md  input.json  input_Hellium.json  input_Nitrogen.json  job.sh  job_script.sh
paper/: README.md  job_ompc.sh  job_ompc_tasks.sh
paper/Helium/: speedup.py
paper/Helium_tasks/: speedup.py
src/: Equipotential.cpp  Force.cpp  GasBuffer.cpp  GasProbe.cpp  Input.cpp  LCL.cpp  LinkedCell.cpp  Math.cpp  Mol.cpp  MoleculeTarget.cpp  RandomNumber.cpp  System.cpp  Time.cpp  main.cpp
src/headers/: Constants.h  Equipotential.h  Force.h  GasBuffer.h  GasProbe.h  Input.h  LCL.h  LinkedCell.h  Math.h  Mol.h  MoleculeTarget.h  RandomNumber.h  System.h  Time.h
